gitops-main/base/databases/mssql/allow-egress-sqlserver.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-sqlserver
  namespace: sqlserver
spec:
  podSelector:
    matchLabels:
      job-name: apply-mssql-job
  policyTypes:
    - Egress
  
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: sqlserver
      ports:
        - protocol: TCP
          port: 1433
